# megablocks

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  STYLE_GUIDE.md  a.py  code-quality.yaml  docker.sh  play.py  pyproject.toml  rand.py  requirements.txt  setup.py  te.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/secrets/: exclude.yaml
.github/workflows/: code-quality.yaml  pr-gpu.yaml  smoketest.yaml  testing-absl-py.yaml
.github/workflows /: code-quality.yaml
.pre-commit/: FILE_HEADER
csrc/: all_to_all.cu  all_to_all.h  binned_gather.h  binned_scatter.cu  binned_scatter.h  cuda_util.h  cumsum.h  histogram.h  indices.h  ops.cu  padded_gather_scatter.h  replicate.h  sort.h
exp/dmoe/: dmoe_125m_8gpu.sh  dmoe_356m_8gpu.sh  dmoe_46m_8gpu.sh  dmoe_760m_16gpu.sh  dmoe_760m_8gpu.sh
exp/gpt2/: gpt2_125m_1gpu.sh  gpt2_125m_8gpu.sh  gpt2_1315m_1gpu.sh  gpt2_1315m_8gpu.sh  gpt2_356m_1gpu.sh  gpt2_356m_8gpu.sh  gpt2_46m_1gpu.sh  gpt2_46m_8gpu.sh  gpt2_760m_1gpu.sh  gpt2_760m_8gpu.sh
exp/mixtral/: dmoe_1315m_8gpu.sh
exp/moe/: moe_125m_8gpu.sh  moe_356m_8gpu.sh  moe_46m_8gpu.sh
gnexmp/moe/: moe_125m_8gpu.sh
megablocks/: __init__.py  _version.py  benchmark_util.py  common.py  grouped_gemm_util.py  pretrain_dmoe.py  pretrain_moe.py  turbo_util.py
megablocks/backend/: __init__.py  kernels.py
megablocks/layers/: __init__.py  activation_fn.py  all_to_all.py  arguments.py  common.py  dmlp_registry.py  dmoe.py  dmoe_benchmark.py  dmoe_benchmark.sh  dmoe_test.py  ffn_benchmark.py  fused_dmoe.py  gelu.py  glu.py  glu_test.py  megatron_layers.py  megatron_moe.py  memory_test.py  memory_test.sh  mlp.py  mlp_benchmark_test.py  mlp_registry.py  mlp_test.py  moe.py  moe_test.py  mpu.py  parallelism_test.py  parallelism_test.sh  router.py  scheduled.py  sharedexpert_registry.py  test_mlp_benchmark.py  test_util.py  testing.py  torch_moe_test.py  weight_parallel.py
megablocks/ops/: __init__.py  all_to_all.py  all_to_all_benchmark.py  all_to_all_benchmark.sh  all_to_all_test.py  all_to_all_test.sh  binned_gather.py  binned_gather_test.py  binned_scatter.py  binned_scatter_test.py  cumsum.py  cumsum_test.py  gather.py  histogram.py  histogram_benchmark.py  histogram_test.py  matmul_benchmark.py  padded_gather.py  padded_gather_test.py  padded_scatter.py  padded_scatter_benchmark.py  padded_scatter_test.py  permute_benchmark.py  repeat.py  replicate.py  replicate_test.py  round_up.py  scatter.py  sort.py  sort_benchmark.py  sort_test.py  sum.py  test_mlp_benchmark.py  topology.py  topology_test.py
tests/: conftest.py  test_smoketest.py
tests/fixtures/: autouse.py  fixtures.py
tests/layers/: architectures.py  dmoe_test.py  glu_test.py  moe_test.py  parallelism_test.py
tests/ops/: binned_gather_test.py  binned_scatter_test.py  cumsum_test.py  histogram_test.py  padded_gather_test.py  padded_scatter_test.py  replicate_test.py  sort_test.py  topology_test.py
yamls/: dmoe_benchmark.yaml  matmul_benchmark.yaml  mpt_benchmark.yaml  triton_benchmark.yaml
